# Tasky

./: .gitignore  BUILD.bazel  Makefile  README.markdown  WORKSPACE  lineeditor.py  scrollinglistbox.py  taskwarrior.py  taskwidget.py  tasky.py  tasky.spec
scripts/: install.sh
